# intel-precise-touch

./: .clang-format  .clangd  .editorconfig  .gitignore  Kconfig  Makefile  README.md  cmd.h  context.h  control.c  control.h  desc.c  desc.h  devices.c  devices.h  dkms.conf  doorbell.h  fpmath.c  fpmath.h  hid.c  hid.h  init.c  mei.c  params.h  protocol.h  quirks.c  quirks.h  receiver.c  resources.c  singletouch.c  singletouch.h  stylus.c  stylus.h  uapi.c  uapi.h
devtool/: Cargo.toml
devtool/src/: device.rs  interface.rs  main.rs
logs/datadumps/: stylus-104-qzed-1.txt  stylus-120-qzed-1.txt  stylus-128-qzed-1.txt  stylus-56-qzed-1.txt  stylus-80-qzed-1.txt  stylus-80-stolld-1.txt  stylus-88-qzed-1.txt  stylus-96-qzed-1.txt  stylus-96-stolld-1.txt  stylus-kitakar.txt  touch-168-qzed-1.txt  touch-168-stolld-1.txt  touch-185-qzed-1.txt  touch-3616-qzed-1.txt  touch-3620-qzed-1.txt  touch-3637-qzed-1.txt  touch-3649-qzed-1.txt  touch-3704-qzed-1.txt  touch-3736-qzed-1.txt  unk1-qzed-136-1.txt
module/: context.h  hid.h  params.c  uapi.c
patches/: 0001-mei-Add-IPTS-device-IDs.patch  0001-misc-mei-Add-missing-IPTS-device-IDs.patch  0002-uapi-Add-MEI-bus-ID.patch
protocol/: commands.h  enums.h  events.h  responses.h  touch.h
src/: Kconfig  Makefile  cmd.c  cmd.h  context.h  control.c  control.h  desc.c  desc.h  doorbell.c  doorbell.h  eds1.c  eds1.h  eds2.c  eds2.h  hid.c  hid.h  main.c  mei.c  mei.h  protocol.h  receiver.c  receiver.h  resources.c  resources.h  spec-data.h  spec-device.h  spec-dma.h  spec-mei.h  thread.c  thread.h
