[package]
name = "ipts"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.16.1"
gtk = "0.8.0"
gio = "0.8.0"
cairo-rs = "0.8.0"
gdk = "0.12.0"
glib = "0.9.0"
num_enum = "0.4.2"
pretty-hex = "0.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
